--- a/app/data/logout.html
+++ b/app/data/logout.html
@@ -1,9 +1,7 @@
 <script>
 
 $(function () {
-    orcmanager.viewController.sync(function (_r) {
-        
-    })
+    orcmanager.viewController.sync(function (_r) {})
 });
 
 </script>
